[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bv-converter"
version = "0.1.0"
description = "Convert Bilibili cached .m4s files to .mp4 format"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jinqi"},
]
keywords = ["bilibili", "video", "converter", "m4s", "mp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "sharklog>=0.1.2",
]

[project.urls]
Homepage = "https://github.com/jinqi/bv_converter"
Repository = "https://github.com/jinqi/bv_converter"
Issues = "https://github.com/jinqi/bv_converter/issues"

[project.scripts]
bv_converter = "bv_converter.cli:main"
